--- a/poll.html
+++ b/poll.html
@@ -5,12 +5,20 @@
 <body>
 
   <form>
-    <p> Enter the Name of the Poll</p>
+    <p> Enter the Question</p>
     <input type="text" name="Name">
 
     <p>Enter The Number of Options</p>
     <input type="text" name="count">
 
     <button type="submit">Create New Poll</button>
-
   </form>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" ntegrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+  <script>
+
+
+
+
+  </script>
