--- a/poll.html
+++ b/poll.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-  <form>
+  <form id="initial">
     <p> Enter the Question</p>
     <input type="text" name="Name">
 
@@ -14,11 +14,21 @@
     <button type="submit">Create New Poll</button>
   </form>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" ntegrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>
 
+    $('form').on('submit', function(event) {
 
-
+    }
 
   </script>
+
+  <div id="answers">
+
+
+  </div>
+
+  <div id="poll">
+
+
+  </div>
