--- a/poll.html
+++ b/poll.html
@@ -36,7 +36,11 @@
         list.append(li);}
 
 
+      const button = $(`<button> ${'Submit Answers'}</button>`);
+
+      $('#answers').append(question);
       $('#answers').append(list);
+      $('#answers').append(button);
     });
 
   </script>
