--- a/poll.html
+++ b/poll.html
@@ -24,6 +24,10 @@
 
     <div id="poll"> </div>
 
+    <div id="table" </div>
+
+
+
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -86,24 +90,7 @@
     });
 
     $('#poll').on('click','#tally',function(event) {
-
-
+      console.log("Hello")
     });
-
-
-    $('#poll').on('click','#another',function(event) {
-
-
-    });
-
-
-
-
-
-
-
-
   </script>
-
-
 </body>
