--- a/poll.html
+++ b/poll.html
@@ -49,7 +49,8 @@
         const li = $(`<div class = "form-group"> <input type="text" name="answer"></div>`)
         list.append(li);}
 
-      list.append(`<button type="submit" class="btn btn-primary">Submit Answer Key</button>`);
+      list.append(`<button id="single"  class="btn btn-primary m-1">Submit Answer Key (Single Answer per poll)</button>`);
+      list.append(`<button id='multi' class="btn btn-secondary m-1">Submit Answer Key (Mutliple Answers per poll)</button>`);
       $('#answers').append(question);
       $('#answers').append(list);
     });
@@ -59,10 +60,10 @@
       $(this).closest('div').remove(); });
 
     // Set up the poll
-    $('#answers').on('submit', function(event) {
+    $('#answers').on('click','#single', function(event) {
 
       event.preventDefault();
-      const form = $(this);
+      const form = $((this).closest('form'));
       const inputs = form.find('input');
       const question = form.find('#quest');
       let counter = 0;
@@ -85,13 +86,46 @@
       $('#poll').append(`<button id="another" class="btn btn-primary m-3 p-2"> Enter another answer </button>`)
     });
 
-    $('#answers').on('submit', function(event) {
+
+    $('#answers').on('click','#multi', function(event) {
+
+      event.preventDefault();
+      const form = $((this).closest('form'));
+      const inputs = form.find('input');
+      const question = form.find('#quest');
+      let counter = 0;
+
+      const list = $(`<form id="poll" class="m-3 border p-3"> <fieldset class="form-group"> </fieldset></form>`);
+
+      for (let input of inputs){
+        input = $(input); // Turn intp JQuery
+        const li = $(`<div class="form-check">
+          <input type="checkbox" id="${counter}" name="radio" value="${input.val()}" class="form-check-input">
+          <label for="${counter}" class="form-check-label">${input.val()}</label>
+        </div>`)
+        counter += 1
+        list.append(li);}
+
+
+      $('#poll').append(question)
+      $('#poll').append(list);
+      $('#poll').append(`<button id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`)
+      $('#poll').append(`<button id="another" class="btn btn-primary m-3 p-2"> Enter another answer </button>`)
+    });
+
+
+    $('#answers').on('click', '#single', function(event) {
       $(this).closest('div').remove();
     });
+
+    $('#answers').on('click', '#multi', function(event) {
+      $(this).closest('div').remove();
+    });
+
 
     $('#poll').on('click','#tally',function(event) {
       console.log("Hello")
     });
-    
+
   </script>
 </body>
