--- a/poll.html
+++ b/poll.html
@@ -1,10 +1,14 @@
-<head>
-    <meta charset="utf-8">
-    <title>Making Poll</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
+<html>
 
+  <head>
+      <meta charset="utf-8">
+      <title>Making Poll</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  </head>
+
+  <body>
+
+<!-- Main Screen for a poll-->
     <div id="inital">
       <form class="m-3 border p-3" id="initial">
         <div class ="form-group">
@@ -19,113 +23,120 @@
       </form>
     </div>
 
-
+<!-- Enter the asnwers Screen-->
     <div id="answers"> </div>
 
+<!-- Poll -->
     <div id="poll"> </div>
 
+<!-- table of results-->
     <div id="table" </div>
 
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script>
+
+      // Build up a set of inputs for answers
+      $('#initial').on('submit', function(event) {
+        event.preventDefault();
+
+        const form = $(this);
+        const cnt = form.find('#count');
+        const qu = form.find('#question');
+        const question =
+
+        $(`<h4 class="ml-2 mt-2"> Possible resposones for </h4>
+           <h4 id="quest" class="ml-4 mb-2 mt-2 "> ${qu.val()} </h4>
+        `);
+
+        const list = $('<form class="m-2 border p-3">');
 
 
-
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-  <script>
-
-    $('#initial').on('submit', function(event) {
-      event.preventDefault();
-
-      const form = $(this);
-      const cnt = form.find('#count');
-      const qu = form.find('#question');
-      const question = $(`<h4 id="quest" class="m-3 p-1"> Possible resposones for (${qu.val()}) </h4>`);
-
-      const list = $('<form class="m-2 border p-3">');
-      list.append(question);
-
-      for (q = 0; q < cnt.val(); q++) {
-        const li = $(`<div class = "form-group"> <input type="text" name="answer"></div>`)
-        list.append(li);}
-
-      list.append(`<button id="single"  class="btn btn-primary m-1">Submit Answer Key (Single Answer per poll)</button>`);
-      list.append(`<button id='multi' class="btn btn-secondary m-1">Submit Answer Key (Mutliple Answers per poll)</button>`);
-      $('#answers').append(question);
-      $('#answers').append(list);
-    });
-
-    // Delete the previous Intial Screen
-    $('#initial').on('submit', function(event) {
-      $(this).closest('div').remove(); });
-
-    // Set up the poll
-    $('#answers').on('click','#single', function(event) {
-
-      event.preventDefault();
-      const form = $((this).closest('form'));
-      const inputs = form.find('input');
-      const question = form.find('#quest');
-      let counter = 0;
-
-      const list = $(`<form id="poll" class="m-3 border p-3"> <fieldset class="form-group"> </fieldset></form>`);
-
-      for (let input of inputs){
-        input = $(input); // Turn intp JQuery
-        const li = $(`<div class="form-check">
-          <input type="radio" id="${counter}" name="radio" value="${input.val()}" class="form-check-input">
-          <label for="${counter}" class="form-check-label">${input.val()}</label>
-        </div>`)
-        counter += 1
-        list.append(li);}
+        for (q = 0; q < cnt.val(); q++) {
+          const li = $(`<div class = "form-group"> <input type="text" name="answer"></div>`)
+          list.append(li);}
 
 
-      $('#poll').append(question)
-      $('#poll').append(list);
-      $('#poll').append(`<button id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`)
-      $('#poll').append(`<button id="another" class="btn btn-primary m-3 p-2"> Enter another answer </button>`)
-    });
+        list.append(`<button id="single"  class="btn btn-primary m-1">Submit Answer Key (Single Answer per poll)</button>`);
+        list.append(`<button id='multi' class="btn btn-secondary m-1">Submit Answer Key (Mutliple Answers per poll)</button>`);
+        $('#answers').append(question);
+        $('#answers').append(list);
+
+        // Delte the current screen
+        $(this).closest('div').remove();
+      });
+
+      // Set up the poll for single choice radio-button
+      $('#answers').on('click','#single', function(event) {
+        event.preventDefault();
+
+        let counter = 0;
+        const form = $((this).closest('form'));
+        const div = $((this).closest('div'));
+        const inputs = form.find('input');
+        const question = div.find('#quest');
+        const list = $(`<form id="poll" class="m-3 border p-3"> <fieldset class="form-group"> </fieldset></form>`);
 
 
-    $('#answers').on('click','#multi', function(event) {
+        for (let input of inputs){
+          input = $(input);
 
-      event.preventDefault();
-      const form = $((this).closest('form'));
-      const inputs = form.find('input');
-      const question = form.find('#quest');
-      let counter = 0;
+          const li =
+          $(`<div class="form-check">
+            <input type="radio" id="${counter}" name="radio" value="${input.val()}" class="form-check-input">
+            <label for="${counter}" class="form-check-label">${input.val()}</label>
+            </div>`)
 
-      const list = $(`<form id="poll" class="m-3 border p-3"> <fieldset class="form-group"> </fieldset></form>`);
+          counter += 1
+          list.append(li);}
 
-      for (let input of inputs){
-        input = $(input); // Turn intp JQuery
-        const li = $(`<div class="form-check">
-          <input type="checkbox" id="${counter}" name="radio" value="${input.val()}" class="form-check-input">
-          <label for="${counter}" class="form-check-label">${input.val()}</label>
-        </div>`)
-        counter += 1
-        list.append(li);}
+        list.append(`<button type="submit" class="btn btn-primary m-3 p-2"> New Poll </button>`);
+        list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`);
+        $('#poll').append(question);
+        $('#poll').append(list);
 
+        $(this).closest('div').remove();
 
-      $('#poll').append(question)
-      $('#poll').append(list);
-      $('#poll').append(`<button id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`)
-      $('#poll').append(`<button id="another" class="btn btn-primary m-3 p-2"> Enter another answer </button>`)
-    });
+      });
 
+      // set up poll for multi choice check-boxes
+      $('#answers').on('click','#multi', function(event) {
+        event.preventDefault();
 
-    $('#answers').on('click', '#single', function(event) {
-      $(this).closest('div').remove();
-    });
-
-    $('#answers').on('click', '#multi', function(event) {
-      $(this).closest('div').remove();
-    });
+        let counter = 0;
+        const form = $((this).closest('form'));
+        const div = $((this).closest('div'));
+        const inputs = form.find('input');
+        const question = div.find('#quest');
+        const list = $(`<form id="poll" class="m-3 border p-3"> <fieldset class="form-group"> </fieldset></form>`);
 
 
-    $('#poll').on('click','#tally',function(event) {
-      console.log("Hello")
-    });
+        for (let input of inputs){
+          input = $(input);
 
-  </script>
-</body>
+          const li =
+          $(`<div class="form-check">
+            <input type="checkbox" id="${counter}" name="radio" value="${input.val()}" class="form-check-input">
+            <label for="${counter}" class="form-check-label">${input.val()}</label>
+           </div>`)
+
+          counter += 1
+          list.append(li);}
+
+        list.append(`<button type="submit" class="btn btn-primary m-3 p-2"> New Poll </button>`);
+        list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`);
+        $('#poll').append(question);
+        $('#poll').append(list);
+
+        $(this).closest('div').remove();
+      });
+
+      // Make a table of all the results
+      $('#poll').on('click','#tally',function(event) {
+        console.log("Hello world")
+      });
+
+    </script>
+  </body>
+</html>
