--- a/poll.html
+++ b/poll.html
@@ -152,7 +152,7 @@
 
         table.append('</tbody>')
         list.append(`<button type="submit" class="btn btn-primary m-3 p-2"> New Poll </button>`);
-        list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`);
+        list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally Entry </button>`);
         $('#poll').append(question);
         $('#poll').append(list);
         $('#table').append(table);
