--- a/poll.html
+++ b/poll.html
@@ -151,8 +151,8 @@
           counter += 1;}
 
         table.append('</tbody>')
-        list.append(`<button type="submit" class="btn btn-primary m-3 p-2"> New Poll </button>`);
         list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally Entry </button>`);
+        list.append(`<button type="submit" class="btn btn-secondary m-3 p-2"> New Poll </button>`);
         $('#poll').append(question);
         $('#poll').append(list);
         $('#table').append(table);
