--- a/poll.html
+++ b/poll.html
@@ -107,8 +107,8 @@
             list.append(li);
             counter += 1;}
 
-        list.append(`<button type="submit" class="btn btn-primary m-3 p-2"> New Poll </button>`);
-        list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally all results </button>`);
+            list.append(`<button type="reset" id="tally" class="btn btn-primary m-3 p-2"> Tally Entry </button>`);
+            list.append(`<button type="submit" class="btn btn-secondary m-3 p-2"> New Poll </button>`);
 
         // Add info to the correct values
         $('#poll').append(question);
