--- a/poll.html
+++ b/poll.html
@@ -179,15 +179,23 @@
 
           // Reading through values that were checked
           for (let val of answers){
+            
+            //row count
+            let row_count = 0
+
             // Reading through each table row
             table.find('tr').each(function (i, el) {
               var $ths = $(this).find('td'),
                 answer = $ths.eq(0).text(),
                 value = $ths.eq(1).text()
+
                 // Checks to see if this value is equal to checked value and increments when true
                 if (String(val) === String(answer)){
-                  $(`#my_table tr:contains(${val}) td`).eq(1).html(Number(value) + 1);}
-              });
+                  $('#my_table').find(`tr:eq(${row_count})`).find('td:eq(1)').html(Number(value) + 1);
+                }
+
+               row_count += 1});
+
             }
       });
 
